tests/baselines/reference/mutuallyRecursiveInference.errors.txt
tests/cases/compiler/mutuallyRecursiveInference.ts(2,27): error TS2536: Type '"a"' cannot be used to index type 'RT'.


==== tests/cases/compiler/mutuallyRecursiveInference.ts (1 errors) ====
    interface T<A> { a: A }
    interface L<RT> extends T<RT['a']> {}
                              ~~~~~~~
!!! error TS2536: Type '"a"' cannot be used to index type 'RT'.
    interface X extends L<X> {}
    